fixed alignment of items in projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,8 @@ main .icons {
 .project {
     display: flex;
     flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
     width: 270px;
     padding-bottom: 1rem;
 }
@@ -493,6 +495,5 @@ main .icons {
 
     .projects {
         grid-template-columns: repeat(1, 1fr);
-        margin: 0 auto;
     }
 }
